added new prayer times source (uae not working yet)

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -202,7 +202,7 @@
   <string name="zoomOut">Küçült</string>
   <string name="zuhr">Öğle</string>
   <string name="calculated">Hesaplanmış</string>
-  <string name="beta_tester">Test sürümünü kullan</string>
+  <string name="beta_tester">MyTest sürümünü kullan</string>
   <string name="widgetClock2">Namaz Vakti - Saat 2*2</string>
   <string name="numbers">Rakamlar</string>
   <string name="dateFormat3">31 Aralık</string>
