--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -31,7 +31,7 @@
   <string name="backupRestore">Restauration de sauvegarde</string>
   <string name="beforeSun">Avant le lever du soleil</string>
   <string name="blackWidget">Widget noir</string>
-  <string name="calcMethod">Méthode de calcul</string>
+  <string name="calcMethod">Méthode</string>
   <string name="calendar">Jours saints</string>
   <string name="calendarIntegration">Intégration des jours saints dans le calendrier</string>
   <string name="cancel">Annuler</string>
