--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -31,7 +31,7 @@
   <string name="backupRestore">Back-up/herstel</string>
   <string name="beforeSun">Voor zonsopgang</string>
   <string name="blackWidget">Zwarte Widget</string>
-  <string name="calcMethod">Rekenmethode</string>
+  <string name="calcMethod">Methode</string>
   <string name="calendar">Islamitische feestdagen</string>
   <string name="calendarIntegration">Integreren in kalender</string>
   <string name="cancel">Annuleren</string>
