--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -60,7 +60,7 @@
   <string name="error">Es ist ein Fehler aufgetreten</string>
   <string name="imsak">Imsak</string>
   <string name="fajr">Fajr</string>
-  <string name="highlatsAdj">Fajr/Isha Anpassung:</string>
+  <string name="highlatsAdj">Anpassung für hohe Breitengrade:</string>
   <string name="fasting">Fasten</string>
   <string name="favorite">Favorit</string>
   <string name="filePicker">Wähle Datei</string>
@@ -278,5 +278,8 @@
   <string name="intro_menu">Über das Seitenmenü kannst du alle Funktionen der App erreichen</string>
   <string name="intro_pager">Du kannst beliebig viele Städte hinzufügen</string>
   <string name="intro_config">In dem du das Fester hoch/runter ziehst kannst du die Monatsansicht und die Stadtkonfiguration erreichen.</string>
-  <string name="intro_config2">Drücke das Wecker Symbol in der ActionBar um den Adhan zu konfigurieren.</string>
+  <string name="intro_config2">Drücke das Weckersymbol in der Navigationsleiste um den Adhan zu konfigurieren.</string>
+  <string name="compass_type_reminder">Klicke hier, um verschiedene Methoden zur Qibla-Ermittlung auszuprobieren.</string>
+  <string name="autoLocation">Auto-Standort</string>
+  <string name="stop">Abbrechen</string>
 </resources>
