--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -15,4 +15,256 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<resources></resources>
+<resources>
+  <string name="activateForMorePrefs">Aktifkan untuk lebih banyak pengaturan</string>
+  <string name="adhanVolume">Volume Adzan</string>
+  <string name="adjAngle">Arah Sudut (sudut / 60th malam)</string>
+  <string name="adjMidnight">Tengah malam</string>
+  <string name="adjTime">Berdasarkan waktu (1/7 malam)</string>
+  <string name="afterImsak">Setelah Fajar</string>
+  <string name="alternativeOngoing">Alternatif notifikasi Widget</string>
+  <string name="angle">Sudut</string>
+  <string name="angleBased">Sudut</string>
+  <string name="appName">Waktu shalat</string>
+  <string name="asr">Asar</string>
+  <string name="backup">Cadangan</string>
+  <string name="backupRestore">Cadangan / Pemulihan</string>
+  <string name="beforeSun">Sebelum matahari terbit</string>
+  <string name="blackWidget">Widget Hitam</string>
+  <string name="calendar">Hari Besar Islam</string>
+  <string name="calendarIntegration">Aktifkan integrasi kalender</string>
+  <string name="cancel">Batal</string>
+  <string name="category">Kategori</string>
+  <string name="changelog">Apa yang baru?</string>
+  <string name="cities">Kota-kota</string>
+  <string name="compass">Arah Kiblat</string>
+  <string name="corruptAudio">File Audio yang buruk</string>
+  <string name="customVolume">Pilih Suara</string>
+  <string name="dateAndTime">Tanggal dan waktu</string>
+  <string name="date">Tanggal</string>
+  <string name="dateFormat1">31 Desember 2013</string>
+  <string name="dateFormat2">31 Desember 2013</string>
+  <string name="dateFormat">Format tanggal</string>
+  <string name="delConfirmDhikr">Apakah Anda benar-benar ingin menghapus \"%1$s\"?</string>
+  <string name="delConfirm">Apakah Anda benar-benar ingin menghapus %1$s?</string>
+  <string name="delete">Hapus</string>
+  <string name="dhikrCount">Tujuan Dzikir</string>
+  <string name="dhikr">Dzikir</string>
+  <string name="distance">Jarak</string>
+  <string name="djuma">Shalat Jumat</string>
+  <string name="dlHadith">Mengunduh basis data hadits?</string>
+  <string name="dlSound">Men-download \"%1$s\" (%2$s)?</string>
+  <string name="earlyNotification">awal pemberitahuan</string>
+  <string name="earlyText">%2$s menit untuk %1$s</string>
+  <string name="error">Terjadi kesalahan</string>
+  <string name="imsak">Imsak</string>
+  <string name="fajr">Fajar</string>
+  <string name="fasting">Cepat</string>
+  <string name="favorite">Favorit</string>
+  <string name="filePicker">Pilih File</string>
+  <string name="fixTimezone">zona waktu +/-:</string>
+  <string name="foundXHadis">menemukan %1$s hadits</string>
+  <string name="gmonth1">Januari</string>
+  <string name="gmonth2">Februari</string>
+  <string name="gmonth3">Maret</string>
+  <string name="gmonth4">April</string>
+  <string name="gmonth5">Mei</string>
+  <string name="gmonth6">Juni</string>
+  <string name="gmonth7">Juli</string>
+  <string name="gmonth8">Agustus</string>
+  <string name="gmonth9">September</string>
+  <string name="gmonth10">Oktober</string>
+  <string name="gmonth11">November</string>
+  <string name="gmonth12">Desember</string>
+  <string name="hadith">Shahih al-Bukhary</string>
+  <string name="hDateFormat1">30 Muharram 1434</string>
+  <string name="hDateFormat2">30 Muharram 1434</string>
+  <string name="hdateFormat">Format tanggal Hijriyah</string>
+  <string name="hijriFix">Penyesuaian penanggalan Hijriah</string>
+  <string name="hmonth1">Muharram</string>
+  <string name="hmonth2">Safar</string>
+  <string name="hmonth3">Rabiul awal</string>
+  <string name="hmonth4">Rabial Akhir</string>
+  <string name="hmonth5">Jumadil awal</string>
+  <string name="hmonth6">Jumadil akhir</string>
+  <string name="hmonth7">Rajab</string>
+  <string name="hmonth8">Syaban</string>
+  <string name="hmonth9">Ramadhan</string>
+  <string name="hmonth10">Syawal</string>
+  <string name="hmonth11">Dzulqadar</string>
+  <string name="hmonth12">dzulhijjah</string>
+  <string name="holyday1">Tahun baru Islam</string>
+  <string name="holyday2">Asyura</string>
+  <string name="holyday3">Maulid Nabi</string>
+  <string name="holyday4">Awal tiga bulan suci</string>
+  <string name="holyday5">Lailatul Rajab</string>
+  <string name="holyday6">Isra dan Miraj</string>
+  <string name="holyday7">Lailatul Bara\'ah</string>
+  <string name="holyday8">Awal Ramadhan</string>
+  <string name="holyday9">Lailatul Qadar</string>
+  <string name="holyday10">Idul Adha</string>
+  <string name="holyday11">Idul Fitri (hari pertama)</string>
+  <string name="holyday12">Idul Fitri (hari ke-2)</string>
+  <string name="holyday13">Idul Fitri (hari ke-3)</string>
+  <string name="holyday14">Hari Arafat</string>
+  <string name="holyday15">Idul Adha 1 hari</string>
+  <string name="holyday16">Idul Adha hari kedua</string>
+  <string name="holyday17">Idul Adha hari ke-3</string>
+  <string name="holyday18">Idul Adha hari ke-4</string>
+  <string name="ishaa">Isya</string>
+  <string name="juristicHanafi">Hanafi</string>
+  <string name="juristicShafi">Mazhab Syafi\'i (Standar)</string>
+  <string name="kerahatDuration">Durasi Waktu Makruh</string>
+  <string name="kerahatIstiwa">Waktu Istiwa (sebelum shalat Zuhur) </string>
+  <string name="kerahatMaghrib">Matahari terbenam (sebelum shalat maghrib)</string>
+  <string name="kerahatSun">Matahari terbit</string>
+  <string name="kerahatTime">Waktu Makruh Sholat</string>
+  <string name="language">Bahasa</string>
+  <string name="leftText">%1$s | %3$s untuk %2$s</string>
+  <string name="maghrib">Maghrib</string>
+  <string name="missedPrayers">Waktu Haramnya Sholat</string>
+  <string name="mixed">Campuran</string>
+  <string name="monthly">Tampilan bulan</string>
+  <string name="morningPrayer">Doa pagi</string>
+  <string name="names">Asmaul Husna</string>
+  <string name="newAddCity">Pilih Kota</string>
+  <string name="newDhikr">Dzikir Baru</string>
+  <string name="noConnection">Tidak ada koneksi</string>
+  <string name="noFavs">Tidak ada favorit</string>
+  <string name="no">Tidak</string>
+  <string name="notification">Pemberitahuan</string>
+  <string name="off">Matikan</string>
+  <string name="ok">OK</string>
+  <string name="oldAddCity">Pilih Kota</string>
+  <string name="ongoingIcon">Tampilkan Ikon Pemberitahuan</string>
+  <string name="ongoingNotification">Pemberitahuan-Widget</string>
+  <string name="other">Lainnya</string>
+  <string name="permissionCalendarText">Jika Anda ingin, bahwa hari-hari besar Islam muncul dalam kalender telepon, Anda harus membolehkan akses kalender. Sebaliknya tidak.</string>
+  <string name="permissionCalendarTitle">Kalender Berechtigung (?)</string>
+  <string name="permissionCameraText">Untuk menggunakan 3D-Kompas, Anda perlu untuk membolehkan akses kamera. Jika Anda hanya akan dapat menggunakan 2D-Kompas.</string>
+  <string name="permissionCameraTitle">Ijin kamera</string>
+  <string name="permissionLocationText">Izin lokasi yang dibutuhkan, untuk menemukan kota Anda. Jika Anda tidak membiarkan aplikasi ini, untuk mengakses lokasi Anda, Anda harus mencari kota Anda secara manual.</string>
+  <string name="permissionLocationTitle">Dapatkan Izin Lokasi</string>
+  <string name="permissionStorageText">Penyimpanan izin yang diperlukan. Tanpa izin yang beberapa hal yang tidak akan bekerja.</string>
+  <string name="permissionStorageTitle">Berikan Izin Penyimpanan</string>
+  <string name="prayerNotification">Pemberitahuan Sholat</string>
+  <string name="refresh">Sinkronisasi</string>
+  <string name="resetConfirmDhikr">Apakah Anda benar-benar ingin mereset\ \"%1$s\"?</string>
+  <string name="restore"> Pulihkan</string>
+  <string name="search">Pencarian</string>
+  <string name="selectOther">Lainnya...</string>
+  <string name="mail">Surel</string>
+  <string name="sendMail">Mengirim Surel</string>
+  <string name="settings">Pengaturan</string>
+  <string name="share">Bagikan</string>
+  <string name="shareTimes">Hari ini waktu sholat untuk %1$s</string>
+  <string name="showMore">Selengkapnya</string>
+  <string name="silenterDuration">durasi hening</string>
+  <string name="silenterType">Modus Hening</string>
+  <string name="silent">Hening</string>
+  <string name="sorted">Urutan</string>
+  <string name="soundPicker">Pilih Suara</string>
+  <string name="sound">Suara</string>
+  <string name="sun">Matahari</string>
+  <string name="switchCompass">Peta/Kompas</string>
+  <string name="tasbih">Tasbih</string>
+  <string name="tesbihat">Tasbeehat</string>
+  <string name="timeBased">Menit</string>
+  <string name="time">Waktu</string>
+  <string name="touchToSelectCity">Tekan di sini untuk memilih kota</string>
+  <string name="transWhiteWidget">Widget Transparan putih</string>
+  <string name="transWidget">Widget Transparan</string>
+  <string name="test">Coba</string>
+  <string name="use12h">Menggunakan Format 12 jam (AM/PM)</string>
+  <string name="useArabicNames">Gunakan waktu sholat Arab</string>
+  <string name="useSilenter">Hening</string>
+  <string name="useVibration">Getar</string>
+  <string name="version">Versi</string>
+  <string name="vibrationDesc">Milisecond - tunggu bergetar menunggu...</string>
+  <string name="vibrationPattern">Pola getaran</string>
+  <string name="volumeAlarm">Volume Alarm</string>
+  <string name="volumeMedia">Volume media</string>
+  <string name="volumeRingtone">Volume nada dering</string>
+  <string name="vote">Beri Nilai</string>
+  <string name="whiteWidget">Widget Putih</string>
+  <string name="widgetClock">Waktu shalat - 4 * 2 jam</string>
+  <string name="widgetCountdownType">Widget - hitung-mundur (menit) </string>
+  <string name="widgetDesign">Tema</string>
+  <string name="widgetLong">Waktu shalat - 4 * 1 Widget</string>
+  <string name="widgetLabel">Waktu shalat - 2 * 2 Widget</string>
+  <string name="widgetSilenter">Waktu shalat - Widget Hening</string>
+  <string name="widgetSmall">Waktu shalat - 1 * 1 Widget</string>
+  <string name="witr">Witir</string>
+  <string name="yes">Ya</string>
+  <string name="zoomIn">Perbesar</string>
+  <string name="zoomOut">Perkecil</string>
+  <string name="zuhr">Dzuhur</string>
+  <string name="calculated">Terkalkulasi</string>
+  <string name="beta_tester">Menjadi penguji beta</string>
+  <string name="widgetClock2">Waktu shalat - 2 * 2 jam</string>
+  <string name="numbers">Digital</string>
+  <string name="dateFormat3">31 Desember </string>
+  <string name="hDateFormat3">30 Muharram </string>
+  <string name="useAlarm">Menggunakan Alarm untuk pemberitahuan</string>
+  <string name="useAlarmDesc">TAHAP PERCOBAAN - jika pemberitahuan tidak muncul dalam waktu, Anda dapat mencoba pengaturan ini. Ikon jam alarm akan ditambahkan ke Status bar!     </string>
+  <string name="ongoingNumber">Menit Tampilkan pemberitahuan Ikon</string>
+  <string name="vakit_indicator">Indikator waktu sholat</string>
+  <string name="vakit_indicator_next">Waktu Sholat berikutnya</string>
+  <string name="vakit_indicator_current">Waktu Sholat saat ini</string>
+  <string name="show_notification_screen">Tampilkan pemberitahuan pada layar</string>
+  <string name="autoremove_notification">Menghapus pemberitahuan setelah azan</string>
+  <string name="about">Tentang</string>
+  <string name="report_bug">Laporkan Masalah</string>
+  <string name="report_bug_sum">Laporkan masalah atau minta fitur baru.</string>
+  <string name="translate">Terjemahkan</string>
+  <string name="translate_sum">Membantu kami menerjemahkan aplikasi ini dalam bahasa lain</string>
+  <string name="github_sum">cabang repositori dan ajukan perbaikan atau laporkan isu baru.</string>
+  <string name="license">Lisensi</string>
+  <string name="license_sum">Periksa lisensi Apache, versi 2.0 ketentuan lisensi digunakan pada waktu shalat</string>
+  <string name="library_licenses">Lisensi Pustaka</string>
+  <string name="library_licenses_sum">Periksa pustaka pihak ketiga yang digunakan dalam waktu shalat</string>
+  <string name="rate">Beri nilai</string>
+  <string name="rate_desc">Tinggalkan kami positif rating jika Anda seperti waktu sholat.</string>
+  <string name="sendMail_sum">Kirimi saya Surel!</string>
+  <string name="beta_tester_desc">Mendaftar sebagai Beta Tester dengan mengklik di sini</string>
+  <string name="no_internet">Tidak ada koneksi Internet</string>
+  <string name="export">Ekspor</string>
+  <string name="versionNotSupported">Versi Android Anda tidak mendukung ini!</string>
+  <string name="from">Dari</string>
+  <string name="to">Kepada</string>
+  <string name="permissionNotGranted">Izin tidak diberikan.</string>
+  <string name="addFromCSV">Menambahkan dari CSV</string>
+  <string name="csvFromFile">Muat dari berkas (.CSV)</string>
+  <string name="csvFromURL">Buka CSV dari URL</string>
+  <string name="stopFacedown">Stop suara dengan memutar layar ke bawah.</string>
+  <string name="ratingFirstDlgTitle"> Apakah anda suka aplikasi ini?</string>
+  <string name="ratingPositiveTitle">Berikan nilai untuk Aplikasi ini</string>
+  <string name="ratingPositiveText">Jika Anda menyukai aplikasi ini, luangkan waktu untuk memberikan peringkat di Play Store.</string>
+  <string name="ratingNegativeTitle">Menulis kritik dan saran!</string>
+  <string name="ratingNegativeText">Menulis Surel dengan pesan, kesan dan saran untuk aplikasi ini dan membantu saya meningkatkan terus menerus!</string>
+  <string name="notnow">Jangan sekarang</string>
+  <string name="totheplaystore">Menuju Play Store</string>
+  <string name="widget_current_vakit">Widget - alternatif indikator waktu saat ini</string>
+  <string name="support_development">Dukung Pengembangan</string>
+  <string name="widget">Widget</string>
+  <string name="showLegacyWidgets">Tampilkan lagacy widget</string>
+  <string name="showLegacyWidgetsSummary">Hanya menggunakan jika Anda memiliki masalah dengan widget Anda</string>
+  <string name="pleaseDeleteAndReadd">Harap menghapus kota ini dan kembali menambahkannya.</string>
+  <string name="showExtraTimes">Menunjukkan doa pagi dan Asr Sani</string>
+  <string name="showExtraTimesSummary">Hanya untuk FaziletTakvimi.com, NamazVakti.com</string>
+  <string name="noAdjustment">Tanpa penyesuaian</string>
+  <string name="customCalc">Kustomisasi</string>
+  <string name="customCalcDesc">Mengatur parameter kustom</string>
+  <string name="systemLang">Sistem bahasa</string>
+  <string name="showIntro">Lihat Intro</string>
+  <string name="continue_">Lanjutkan</string>
+  <string name="back">Kembali</string>
+  <string name="finish">Selesai</string>
+  <string name="shareText">Hei, periksa aplikasi ini: https://play.google.com/store/apps/details?id=com.metinkale.prayer</string>
+  <string name="share_sum">Berbagi aplikasi ini dengan orang lain!</string>
+  <string name="showIntro_sum">Tampilkan perkenalan App ini</string>
+  <string name="intro_menu">Melalui Menu, Anda dapat mengakses semua fitur aplikasi ini</string>
+  <string name="intro_pager">Anda dapat menambahkan banyak kota yang Anda inginkan</string>
+  <string name="intro_config">Dengan menggesekkan atas/bawah, Anda dapat mengakses Lihat bulanan dan pengaturan kota.</string>
+  <string name="compass_type_reminder">Klik di sini untuk mencoba metode yang berbeda untuk mencari arah kiblat yang benar.</string>
+</resources>
