--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -60,7 +60,7 @@
   <string name="error">An error occurred</string>
   <string name="imsak">Imsak</string>
   <string name="fajr">Fajr</string>
-  <string name="highlatsAdj">Fajr/Ischa Adjustment:</string>
+  <string name="highlatsAdj">High Latitudes Adjustment:</string>
   <string name="fasting">Fast</string>
   <string name="favorite">Favorite</string>
   <string name="filePicker">File Picker</string>
@@ -271,4 +271,7 @@
   <string name="intro_pager">You can add as many cities as you want</string>
   <string name="intro_config">By swiping up/down you can access to monthly view and the city settings.</string>
   <string name="intro_config2">By pressing the Alarm Icon in the ActionBar you can access the notification settigs to configure Adhan.</string>
+  <string name="compass_type_reminder">Click here to try different methods of finding the correct Qibla direction.</string>
+  <string name="autoLocation">Auto Location</string>
+  <string name="stop">Stop</string>
 </resources>
